--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -1,6 +1,3 @@
-body{
-    font-family:Lato
-}
 h1,h2,h3,h4,h5,h6{
     font-weight:500;
     font-family:Montserrat
@@ -36,7 +33,7 @@ hr.star-dark:after{
     background-color:#fff
 }
 section{
-    padding:6rem 0
+    padding: 6rem
 }
 section h2{
     font-size:2.25rem;
@@ -150,14 +147,15 @@ header.masthead h2{
         padding-bottom:6rem
     }
     header.masthead h1{
-        font-size:4.75em;
+        font-size:2.75em;
         line-height:4rem
     }
     header.masthead h2{
-        font-size:1.75em
+        font-size:1.5em
     }
 }
 .portfolio{
+    padding-top:12rem;
     margin-bottom:-15px
 }
 .portfolio .portfolio-item{
